erDiagram
    city {
        INTEGER city_id PK
        TEXT city_name
        TEXT state
        TEXT country
        TEXT region
        TEXT time_zone
        BOOLEAN has_dedicated_ig
        TEXT ig_handle
    }

    facilitator {
        INTEGER facilitator_id PK
        INTEGER city_id FK
        TEXT facilitator_name
        TEXT facilitator_email
        TEXT ig_handle
        BOOLEAN tag_on_ig
    }

    venue {
        INTEGER venue_id PK
        INTEGER city_id FK
        TEXT venue_name
        TEXT venue_ig_handle_1
        TEXT venue_ig_handle_2
        TEXT venue_events_site
        TEXT venue_address
        TEXT venue_fb
        TEXT venue_fb
        TEXT venue_TT
        TEXT notes
    }

    event {
        INTEGER event_id PK
        INTEGER city_id FK
        INTEGER venue_id FK
        INTEGER facilitator_id FK
        DATE event_date
        TEXT event_day_of_week
        TIME event_start_time
        TEXT event_type
        TEXT event_link
        BOOLEAN sold_out
        BOOLEAN is_dating
        INTEGER tickets_sold
        INTEGER ticket_threshold
        INTEGER num_attended
        INTEGER man_tix
        INTEGER woman_tix
        INTEGER man_tix_understudy
        INTEGER woman_tix_understudy
        DATETIME first_scraped_at
        DATETIME last_checked_at
        DATETIME status_changed_at
    }

    tag {
        INTEGER tag_id PK
        TEXT tag_name
        TEXT tag_category
    }

    event_tag {
        INTEGER event_tag_id PK
        INTEGER event_id FK
        INTEGER tag_id FK
    }

    city ||--o{ facilitator : "has"
    city ||--o{ venue : "has"
    city ||--o{ event : "hosts"
    venue ||--o{ event : "located at"
    facilitator ||--o{ event : "runs"
    event ||--o{ event_tag : "tagged with"
    tag ||--o{ event_tag : "applied to"
